--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "stdbool.h": "c",
         "circular_linked_list.h": "c",
-        "double_linked_list.h": "c"
+        "double_linked_list.h": "c",
+        "single_linked_list.h": "c"
     }
 }
